--- a/photos/templates/photos/all_photo.html
+++ b/photos/templates/photos/all_photo.html
@@ -29,9 +29,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-                {% if request.user.is_authenticated %}
-                <p>Hello {{request.user}}</p>
-                {% endif %}
+
                 <div class="card">
                     <div class="card-header">
                         Categories
@@ -49,9 +47,8 @@
                         {% endfor %}
 
 
-                        <a href="{% url 'add' %}" class="btn btn-dark btn-block btn-sm m-1">Add Photo</a>
-                        <a href="{% url 'logout' %}" class="btn btn-dark btn-block btn-sm m-1">Logout</a>
-                        <a href="{% url 'all_photo' %}" class="btn btn-dark btn-block btn-sm m-1">All Photo</a>
+                        
+                        <a href="{% url 'gallery' %}" class="btn btn-dark btn-block btn-sm m-1">Private</a>
                     </ul>
                 </div>
 
@@ -73,14 +70,6 @@
                     {% empty %}
                     <h3>No photos...</h3>
                     {% endfor %}
-
-
-
-
-
-
-
-
                 </div>
             </div>
         </div>
