--- a/photos/templates/photos/all_photo.html
+++ b/photos/templates/photos/all_photo.html
@@ -36,11 +36,11 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a href="{% url 'gallery' %}">All</a>
+                            <a href="{% url 'all_photo' %}">All</a>
                         </li>
                         {% for category in categories %}
                         <li class=" list-group-item">
-                            <a href="{% url 'gallery' %}?category={{category.name}}">
+                            <a href="{% url 'all_photo' %}?category={{category.name}}">
                                 {{category.name}}
                             </a>
                         </li>
