--- a/photos/templates/photos/photo.html
+++ b/photos/templates/photos/photo.html
@@ -19,6 +19,7 @@
 
                 <!-- <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a> -->
                 <a href="javascript:history.back()" class="btn btn-dark my-3">Go Back</a>
+                <a href="{{photo.image.url}}" class="btn btn-dark my-3" download>Download</a>
                 <div style="height: 90vh;">
                     <img style="max-width: 100%; max-height: 100%;" src="{{photo.image.url}}">
 
